[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "community-scraper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "trafilatura>=1.12",
    "html2text>=2024.2",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "APScheduler>=3.10",
    "structlog>=24.1",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "resend>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scraper*"]

[tool.ruff]
line-length = 100
target-version = "py312"
